# saltdiscordbot

./: .env  .eslintrc.json  .gitignore  Cópia de saltbot.js  LICENSE.md  README.md  bot.js  bot.ts  changeConsole.js  changeConsole.ts  commandHandler.js  commandHandler.ts  commandHandlerFuncs.js  commandHandlerFuncs.ts  data.toml  help.js  package-lock.json  package.json  pom.xml  pyproject.toml  requirements.txt  saltbeta.js  saltbot.js  saltbot.ts  tsconfig.json  tslint.json
.run/: Main.run.xml
Game/: about.md
Info/: about.md  admins.json  modules.json
Users/: about.md
Wrappers/: about.md  aplet-pastebin.js  aplet-trello.js  fullencrypt.js  mee6rank.js  whatis.md
app/: pom.xml
classes/: _time.js  _time.ts  actionlogger.js  actionlogger.ts  command.js  command.ts  commandClient.js  commandClient.ts  cross.js  cross.ts  database.js  database.ts  interval.js  interval.ts  logger.js  logger.ts  messager.js  messager.ts  multiprompt.js  multiprompt.ts  permissions.js  permissions.ts  searcher.js  searcher.ts  time.js  time.ts
cmdhandler/: commandHandler.js  commandHandler.ts  commandHandlerFuncs.js  wordFilterer.js  wordFilterer.ts
commands/: 8ball.ts  avatar.ts  ban.ts  cmdIndex.js  cmdIndex.ts  eval.ts  help.ts  kick.ts  noDelBan.ts  ping.js  ping.ts  prefix.ts  random.ts  rip.ts  softban.ts  unban.ts
constants/: constants.js  constants.ts
data/: colorList.ts
delivery/: pom.xml
funcs/: funcs.js  funcs.ts
handlerfuncs/: commandHandlerFuncs.js  commandHandlerFuncs.ts
launcher/: pom.xml
misc/: constants.js  constants.ts  contextType.js  d.js  (+13 more)
(+498 files in other folders)
