[tool.poetry]
name = "saltdiscordbot"
version = "0.1.0"
description = "A multi-purpose Discord bot focused on Moderation."
authors = ["Pg Biel <pgtransformiceandhacks@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
qrcode = "^6.1"
"discord.py" = "^1.5.1"
motor = "^2.3.0"
Unidecode = "^1.1.1"
python-dateutil = "^2.8.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
